added short english descriptions to models
