# docs/swagger.json
@@ -263,8 +263,13 @@
                         "type": "string",
                         "description": "Описание",
                         "name": "description",
-                        "in": "formData",
-                        "required": true
+                        "in": "formData"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Краткое описание",
+                        "name": "short_desc",
+                        "in": "formData"
                     },
                     {
                         "type": "number",
@@ -617,6 +622,9 @@
                 },
                 "power": {
                     "type": "number"
+                },
+                "shortDesc": {
+                    "type": "string"
                 },
                 "title": {
                     "type": "string"
